--- a/Tel4Net/Tel4Net.csproj
+++ b/Tel4Net/Tel4Net.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RepositoryUrl>https://github.com/deadmann/Tel4Net</RepositoryUrl>
     <PackageProjectUrl>https://github.com/users/deadmann/projects/1</PackageProjectUrl>
-    <PackageTags>Telephone, Mobile Phone, Telephone Normalization, Telephone Validation</PackageTags>
+    <PackageTags>Telephone, Mobile, Normalization, Validation</PackageTags>
     <Copyright>© 2020 Hassan Faghihi</Copyright>
     <Description>Provides validation and normalization for phone numbers. with respect to E.164 (an international standard (ITU-T Recommendation), titled The international public telecommunication numbering plan)</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -13,6 +13,9 @@
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <Authors>Hassan Faghihi</Authors>
     <Product>Tel4You</Product>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
